--- a/Makefile.in
+++ b/Makefile.in
@@ -27,7 +27,8 @@ DATA = \
 	extsql/bdr--2.0.3.0--2.0.4.0.sql \
 	extsql/bdr--2.0.4.0--2.0.5.0.sql \
 	extsql/bdr--2.0.5.0--2.0.6.0.sql \
-	extsql/bdr--2.0.6.0--2.0.7.0.sql
+	extsql/bdr--2.0.6.0--2.0.7.0.sql \
+	extsql/bdr--2.0.7.0--2.1.0.0.sql
 
 # Remember to add $(call genextfile,from,to) invocations for these
 DATA_built = \
@@ -41,7 +42,8 @@ DATA_built = \
 	extsql/bdr--2.0.4.0.sql \
 	extsql/bdr--2.0.5.0.sql \
 	extsql/bdr--2.0.6.0.sql \
-	extsql/bdr--2.0.7.0.sql
+	extsql/bdr--2.0.7.0.sql \
+	extsql/bdr--2.1.0.0.sql
 
 DOCS = README.bdr bdr.conf.sample
 
@@ -245,6 +247,7 @@ $(eval $(call genextfile,2.0.3.0,2.0.4.0))
 $(eval $(call genextfile,2.0.4.0,2.0.5.0))
 $(eval $(call genextfile,2.0.5.0,2.0.6.0))
 $(eval $(call genextfile,2.0.6.0,2.0.7.0))
+$(eval $(call genextfile,2.0.7.0,2.1.0.0))
 
 bdr_dump: $(DUMPOBJS)
 	$(CC) $(CFLAGS) $(DUMPOBJS) $(LIBS) $(libpq_pgport) $(LDFLAGS) $(LDFLAGS_EX) $(BDR_DUMP_LIBS) -o $@$(X)
