Added user to pg_regress arguments

--- a/run_tests.in
+++ b/run_tests.in
@@ -84,6 +84,7 @@ $REGRESS_BASE/$TESTBINARY \
     --host $SOCKET \
     --port $PORT \
     --dbname $DBNAME \
+    --user postgres \
     --inputdir=@srcdir@ \
     "$@"
 
