--- a/Makefile.in
+++ b/Makefile.in
@@ -131,20 +131,18 @@ SEQTESTS := dml_sequence
 else
 OBJS += bdr_seq_stub.o
 REGRESS_COMPAT := 
-# Can't run ddl_sequence on 9.6
-# DDL disabled on 9.6 for now
-#DDLTESTS := \
-#	ddl_enable_ddl \
-#	ddl_create \
-#	ddl_alter_table \
-#	ddl_extension \
-#	ddl_function \
-#	ddl_grant \
-#	ddl_mixed \
-#	ddl_namespace \
-#	ddl_replication_set \
-#	ddl_view \
-#	ddl_disable_ddl
+DDLTESTS := \
+	ddl_enable_ddl \
+	ddl_create \
+	ddl_alter_table \
+	ddl_extension \
+	ddl_function \
+	ddl_grant \
+	ddl_mixed \
+	ddl_namespace \
+	ddl_replication_set \
+	ddl_view \
+	ddl_disable_ddl
 
 SEQTESTS :=
 endif
